<resources>
    <string name="app_name">Unilever</string>
    <string name="Input1">\tINPUT 1\t</string>
    <string name="Input2">\tINPUT 2\t</string>
    <string name="Input3">\tINPUT 3\t</string>
    <string name="Input4">\tINPUT 4\t</string>
    <string name="Time1">   \tT1(in sec)\t</string>
    <string name="Time2">   \tT2(in sec)\t</string>
    <string name="Time3">   \tT3(in sec)\t</string>
    <string name="Time4">   \tT4(in sec)\t</string>
    <string name="Speed1">  \t S1(X100RPM)\t</string>
    <string name="Speed2">  \t S2(X100RPM)\t</string>
    <string name="Speed3">  \t S3(X100RPM)\t</string>
    <string name="Speed4">  \t S4(X100RPM)\t</string>
    <string name="stop">\tSTOP\t</string>
    <string name="start">\tSTART\t</string>
    <string name="input_1">Input 1</string>
    <string name="input_2">Input 2</string>
    <string name="input_3">Input 3</string>
    <string name="input_4">Input 4</string>
    <string name="s1">S1</string>
    <string name="t1">T1</string>
    <string name="t2">T2</string>
    <string name="s2">S2</string>
    <string name="t3">T3</string>
    <string name="s3">S3</string>
    <string name="t4">T4</string>
    <string name="s4">S4</string>
    <string name="start_">Start</string>
    <string name="stop_">Stop</string>

    <string-array name="speed_hex">
        <!-- 0-->
        <item>0</item>
        <!-- 5-->
        <item>0</item>
        <!-- 10-->
        <item>0</item>
        <!-- 15-->
        <item>0</item>
        <!-- 20-->
        <item>0</item>

        <item>13</item>
        <item>14</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>19</item>
        <item>1A</item>
        <item>1B</item>
        <item>1C</item>
        <item>1C</item>
        <item>1D</item>
        <item>1E</item>
        <item>1F</item>
        <item>20</item>
        <item>21</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>27</item>
        <item>28</item>
        <item>28</item>
        <item>29</item>
        <item>2A</item>
        <item>2B</item>
        <item>2D</item>
        <item>2F</item>
        <item>33</item>
        <item>36</item>
        <item>39</item>
        <item>3B</item>
        <item>3D</item>
        <item>41</item>
        <item>44</item>
        <item>4A</item>
    </string-array>


    <string-array name="speed_ascii">
        <!-- 0-->
        <item>0</item>
        <!-- 5-->
        <item>0</item>
        <!-- 10-->
        <item>0</item>
        <!-- 15-->
        <item>0</item>
        <!-- 20-->
        <item>0</item>

        <item>19</item>
        <item>20</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>39</item>
        <item>40</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>45</item>
        <item>47</item>
        <item>51</item>
        <item>54</item>
        <item>57</item>
        <item>59</item>
        <item>61</item>
        <item>65</item>
        <item>68</item>
        <item>74</item>
    </string-array>

</resources>
